# src/main/java/com/gym/crm/app/controller/TraineeController.java
@@ -57,9 +57,9 @@ public class TraineeController implements TraineesApi {
     }
 
     @PutMapping("/{username}/trainers")
-    public ResponseEntity<List<TraineeAssignedTrainersUpdateResponse>> updateTraineeTrainers(@PathVariable String username,
-                                                                                             TraineeAssignedTrainersUpdateRequest request) {
-        List<TraineeAssignedTrainersUpdateResponse> response = facade.updateTraineeTrainersList(username, request);
+    public ResponseEntity<TraineeAssignedTrainersUpdateResponse> updateTraineeTrainers(
+            TraineeAssignedTrainersUpdateRequest request, @PathVariable String username) {
+        TraineeAssignedTrainersUpdateResponse response = facade.updateTraineeTrainersList(username, request);
 
         return ResponseEntity.ok(response);
     }
